[project]
name = "aissert-workspace"
version = "0.1.0"
description = "A lightweight testing suite for AI applications to ensure your generative outputs behave as expected"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5.0.0",
    "ruff>=0.15.0,<1.0.0"
]

[tool.uv]
exclude-newer = "7 days"

[tool.uv.workspace]
members = ["aissert", "aissert-cli", "pytest-aissert", "qa_bot", "example-pkg"]
