[project]
name = "aissert"
version = "0.0.1-alpha"
description = "Library for metrics and tests on NLP sets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decorator",
    "click",
    "PyYAML==6.0.2",
    "langid",
]

[project.scripts]
example = "cli:main_cli"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    # "debugpy>=1.8.11"
]
