[project]
name = "example-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aissert",
    # TODO move to optional test dep group
    "pytest-aissert",
    "litellm==1.63.14",
]

[project.scripts]
example = "example_pkg.main:main_cli"

[tool.uv.sources]
aissert = { path = "../aissert", editable = true }
pytest-aissert = { path = "../pytest-aissert", editable = true }
