[project]
name = "chatbot"
version = "0.1.0"
description = "Chatbot example using giskard"
readme = "README.md"
requires-python = ">=3.11.0,<3.12.0"
dependencies = [
    "loguru",
    "langchain",
    "langchain-mistralai",
    "langchain-community",
    "pypdf",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "giskard[llm]",
]

