[project]
name = "qa_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "giskard[llm]>=2.16.2",
    "jupyterlab>=4.3.6",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-mistralai>=0.2.9",
    "loguru>=0.7.3",
    "openai>=1.68.2",
    "pypdf>=5.4.0",
    "streamlit>=1.43.2",
    "tabulate>=0.9.0",
]

packages = [
    { include = "src"},
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
tests = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-sugar>=1.0.0",
]
