[project]
name = "qa_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# Capped below 3.13: giskard pins numpy<2, which conflicts with the numpy>=2.1
# that langchain-community requires on Python 3.13+.
requires-python = ">=3.11,<3.13"
dependencies = [
    # giskard[llm] caps bokeh<3.5 and numpy<2, transitively holding bokeh and
    # transformers below their patched releases. Accepted; see SECURITY.md.
    "giskard[llm]>=2.19.2,<3.0.0",
    "jupyterlab>=4.5.9,<5.0.0",
    "langchain>=1.3.9,<2.0.0",
    "langchain-community>=0.4.2,<1.0.0",
    "langchain-text-splitters>=1.1.2,<2.0.0",
    "langchain-mistralai>=1.0.0,<2.0.0",
    "loguru>=0.7.3,<1.0.0",
    "openai>=1.68.0,<3.0.0",
    "pypdf>=6.13.3,<7.0.0",
    "streamlit>=1.54.0,<2.0.0",
    "tabulate>=0.9.0,<1.0.0",
]

packages = [
    { include = "src"},
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0,<8.0.0",
]
tests = [
    "pre-commit>=4.6.0,<5.0.0",
    "ruff>=0.15.20,<1.0.0",
    "pytest>=9.1.1,<10.0.0",
    "pytest-sugar>=1.1.1,<2.0.0",
]

[tool.uv]
exclude-newer = "7 days"
# Floor transitive deps to their security-patched versions (giskard/langchain
# pull these in and may otherwise resolve to vulnerable releases).
constraint-dependencies = [
    "langsmith>=0.8.18",
]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
